add style review to instances

--- a/sweagent_sr.ipynb
+++ b/sweagent_sr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -78,6 +78,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_filtered_pylint_output(pylint_output):\n",
+    "    return filter_pylint_output(pylint_output, keep_types=['warning', 'error', 'fatal'], max=N_PYLINT_MESSAGES_SHOWN_TO_AGENT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def add_pylint_feedback_to_tasks():\n",
+    "    for task in tasks:\n",
+    "        instance_id = task['instance_id']\n",
+    "        pylint_path = f'gc_results/sweb-style-review/{instance_id}/run_evaluation/style_check2/gold/{instance_id}_styleReview/pylint_errors.json'\n",
+    "\n",
+    "        if not os.path.exists(pylint_path):\n",
+    "            continue\n",
+    "\n",
+    "        try:\n",
+    "            with open(pylint_path, 'r') as f:\n",
+    "                pylint_output = json.load(f)\n",
+    "        except JSONDecodeError as e:\n",
+    "            print(f'JSONDecodeError for {instance_id}')\n",
+    "            continue\n",
+    "\n",
+    "        filtered_pylint_output = get_filtered_pylint_output(pylint_output)\n",
+    "        task['style_review'] = filtered_pylint_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSONDecodeError for scrapy__scrapy-5679\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_pylint_feedback_to_tasks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "610"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([t for t in tasks if 'style_review' in t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('data/codearena_instances.json', 'w') as f:\n",
+    "    f.write(json.dumps(tasks, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
@@ -95,7 +197,7 @@
     "    with open(pylint_output_path, 'r') as f:\n",
     "        pylint_output = json.load(f)\n",
     "\n",
-    "    pylint_output = filter_pylint_output(pylint_output, keep_types=['warning', 'error', 'fatal'], max=N_PYLINT_MESSAGES_SHOWN_TO_AGENT)\n",
+    "    pylint_output = get_filtered_pylint_output(pylint_output)\n",
     "    problem_statement = \"\"\"<pylint_output>\n",
     "{pylint_output}\n",
     "</pylint_output>\"\"\"\n",
@@ -143,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -177,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -210,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -243,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -279,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -319,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -328,29 +430,6 @@
    "outputs": [],
    "source": [
     "sr_results = import_sr_results_gold('gc_results/sweb-style-review', run_id='style_check2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "610\n"
-     ]
-    }
-   ],
-   "source": [
-    "good_ids = list(sr_results.keys())\n",
-    "print(len(good_ids))\n",
-    "# save_ids(good_ids, 'good_ids.txt')"
    ]
   },
   {
@@ -872,15 +951,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sweagent_review_results = load_sweagent_results('gc_results/sweb-sweagent-rf')"
+    "sweagent_review_results = load_sweagent_results('gc_results/sweb-sweagent-rf')\n",
+    "len(sweagent_review_results)"
    ]
   },
   {
