--- a/sweagent.ipynb
+++ b/sweagent.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 171,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -277,6 +277,12 @@
     "                # not sure why this is the format lol but whatever\n",
     "                assert type(preds['model_patch']) == dict\n",
     "                if preds['model_patch'] is None:\n",
+    "                    continue\n",
+    "\n",
+    "                if type(preds['model_patch']) == dict:\n",
+    "                    preds= preds['model_patch']\n",
+    "\n",
+    "                if pred['model_patch'] is None:\n",
     "                    continue\n",
     "\n",
     "                results[instance_id] = preds\n",
@@ -498,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 174,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -516,12 +522,12 @@
    "source": [
     "sweagent_results_llama = load_sweagent_results('gc_results/sweb-sweagent-sr-llama')\n",
     "print(len(sweagent_results_llama))\n",
-    "# save_sweagent_preds(sweagent_results_llama, 'gc_results/sweagent_preds/sweagent_sr_llama_all_preds.jsonl')"
+    "save_sweagent_preds(sweagent_results_llama, 'gc_results/sweagent_preds/sweagent_sr_llama_all_preds.jsonl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 166,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -547,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 170,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -559,40 +565,16 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "0\n"
+      "195\n"
      ]
     }
    ],
    "source": [
-    "sweagent_sr_check_results_llama = import_sr_results_nongold('gc_results/sweb-sweagent-sr-check-llama', run_id='sweagent_sr_check_llama')\n",
+    "sweagent_sr_check_results_llama = import_sr_results_nongold('gc_results/sweb-sweagent-sr-check-llama', run_id='sweagent_sr_llama_check')\n",
     "print(len(sweagent_sr_check_results_llama))\n",
     "\n",
-    "sweagent_sr_bf_check_results_llama = import_sweagent_bugfixing_results('gc_results/sweb-sweagent-sr-bf-check-llama', run_id='sweagent_sr_bf_check_llama')\n",
+    "sweagent_sr_bf_check_results_llama = import_sweagent_bugfixing_results('gc_results/sweb-sweagent-sr-bf-check-llama', run_id='sweagent_sr_bf_llama_check')\n",
     "print(len(sweagent_sr_bf_check_results_llama))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "619"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len([t for t in tasks if 'bad_patches' in t and any([bp['source'] == 'badpatchllm' for bp in t['bad_patches']])])"
    ]
   },
   {
